--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Trip Sorter</title>
-  <base href="/angular4-showcase">
+  <base href="/angular4-showcase/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
